--- a/cnlatex/interests.tex
+++ b/cnlatex/interests.tex
@@ -1,6 +1,6 @@
 %\section*{Research Interests}
-\section{\texorpdfstring{\faInfoCircle\ 研究兴趣}{研究兴趣}}
-\cvitem{}{健康地理; 空间生命历程流行病学;空间统计 ; 城市计算; 时空大数据; 生态信息学}
+\section{\texorpdfstring{\faInfoCircle\ 研究领域}{研究领域}}
+\cvitem{}{健康地理学;空间全生命周期健康;空间统计;城市计算;时空大数据;生态信息学}
 %\begin{itemize}
 %\item Urban Computing
 %\item Spatial-Temporal Big Data
