--- a/cnlatex/researches.tex
+++ b/cnlatex/researches.tex
@@ -1,8 +1,8 @@
 \section{\texorpdfstring{\faUniversity\ 科研项目}{科研项目}}
-\mycvitemac{2021-2021}{'COVID-19大流行下居民日常行为，生活方式与城市建成环境的演变规律研究', 2020年度'清华-腾讯'新兴技术×未来城市空间项目'WeSpace学术支持计划'}{PI}
-\mycvitemac{2018-2019}{'基于GIS和多源遥感数据的福建省台风灾害评价指数构建', 数字福建自然灾害监测大数据研究所开放基金(NDMBD2018001)}{Investigator}
-\mycvitemac{2016-2020}{'长三角城市群生态安全保障关键技术研究与集成示范', 国家重点研发计划(2016YFC0502704)}{Investigator}
-\mycvitemac{2015-2018}{'基于ETKF-3DVAR混合同化的桉树人工林碳固定尺度扩展研究', 国家自然科学基金面上项目(31470578)}{Investigator}
-\mycvitemac{2015-2016}{'基于空间错位理论的福建省旅游业发展时空差异研究',福建师范大学大学生创新创业训练计划(创新训练类)项目(cxxl-2015137)}{Investigator}
-\mycvitemac{2015-2016}{'基于GIS的福州市仓山区医疗设施空间布局优化评价', 福建师范大学大学生创新创业训练计划(创新训练类)项目(cxxl-2015146)}{Investigator}
-\mycvitemac{2014-2015}{'地震灾害下高校人员疏散及避难安置空间优化模型研究', 福建师范大学大学生创新创业训练计划(创新训练类)项目(cxxl-2014137)}{PI}
+\mycvitemac{2023-2026}{“老年人及儿童社区居家环境健康风险评价与防范及适宜产品开发”, 国家重点研发计划“主动健康与人口老龄化科技应对”重点专项(2023YFC3604704)}{参与}
+\mycvitemac{2022-2025}{“城市社区空间宜步行性对儿童肥胖的影响机制研究”, 国家自然科学基金面上资助项目(42271433) }{参与}
+\mycvitemac{2020-2021}{“COVID-19大流行下居民日常行为，生活方式与城市建成环境的演变规律研究”, 2020年度“清华-腾讯”新兴技术×未来城市空间项目“WeSpace学术支持计划”}{主持}
+\mycvitemac{2018-2019}{“基于GIS和多源遥感数据的福建省台风灾害评价指数构建”, 数字福建自然灾害监测大数据研究所开放基金(NDMBD2018001)}{参与}
+\mycvitemac{2016-2020}{“长三角城市群生态安全保障关键技术研究与集成示范”, 国家重点研发计划“典型脆弱生态修复与保护研究”专项(2016YFC0502704)}{参与}
+\mycvitemac{2015-2018}{“基于ETKF-3DVAR混合同化的桉树人工林碳固定尺度扩展研究”, 国家自然科学基金面上资助项目(31470578)}{参与}
+\mycvitemac{2014-2015}{“地震灾害下高校人员疏散及避难安置空间优化模型研究”, 福建师范大学大学生创新创业训练计划(创新训练类)项目(cxxl-2014137)}{主持}
