--- a/interests.tex
+++ b/interests.tex
@@ -1,6 +1,6 @@
 %\section*{Research Interests}
 \section{\texorpdfstring{\faInfoCircle\ Research Interests}{Research Interests}}
-\cvitem{}{Health Geography; Spatial Lifecourse Epidemiology; Spatial Statistics; Urban Computing; Spatial-Temporal Big Data; Ecoinformatics}
+\cvitem{}{Health Geography; Spatial Lifecourse Helath; Spatial Statistics; Urban Computing; Spatial-Temporal Big Data; Ecoinformatics}
 %\begin{itemize}
 %\item Urban Computing
 %\item Spatial-Temporal Big Data
