--- a/presentation.tex
+++ b/presentation.tex
@@ -1,11 +1,12 @@
 \section{\texorpdfstring{\faCommentsO\ Presentations}{Presentations}}
-\mycvitemXP{2023.05.19}{Seeking your interest and going ahead will contribute to success(\textbf{invited})}{Class 3, Senior 1,Xiamen No.1 High School of Fujian}{Xiamen No.1 High School of Fujian, Xiamen, China}
-\mycvitemXP{2022.08.18}{Do neighborhood boundaries matter for examining the associations between environmental factors and obesity(\textbf{invited})}{The 29th International Conference on Geoinformatics in 2022 session 10-2 GIScience for Public Health}{China University of Geosciences(Beijing),Beijing, China}
-\mycvitemXP{2020.12.12}{The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta(\textbf{invited})}{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance}{Xiamen University, Xiamen, China}
-\mycvitemXP{2020.08.07}{What is geography? From coronavirus disease 2019 to Bei Dou Systems(\textbf{invited})}{Geography lecture group,Tong An No.1 High School of Fujian}{Tong An No.1 High School of Fujian, Xiamen, China}
-\mycvitemXP{2018.05.27}{The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics}{11th Chinese R Language Conference}{Renmin University of China, Beijing, China}
-\mycvitemXP{2018.05.22}{High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale}{13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018)}{China National Convention Center, Beijing, China}
-\mycvitemXP{2017.11.11}{The Environmental Effect of Urban Form on PM2.5: A Case Study of Beijing-Tianjin-Hebei Urban Agglomeration}{9th Chinese Landscape Eoclogy workshop}{Sanyu Houtel, Guangzhou, China}
-\mycvitemXP{2017.09.28}{The Assement Platform of Urban Forest Ecosystem Servcie Based on InVEST model and IOT(\textbf{invited})}{2rd urban environment long-term monitor and sustainable development workshop}{Shanghai Normal University, Shanghai, China}
-\mycvitemXP{2016.11.27}{The Criminal Geographical Analysis about Walking Environment of Urban}{The Workshop of 12th Spatial Behavior and Planning \& Spatial-Temporal Behavior and Social Planning Research}{Beijing Union University, Beijing, China}
-\mycvitemXP{2016.07.01}{Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District}{10th annual conference of International Association of China Planning}{Peking University, Beijing, China}
+\mycvitemXP{2024.01.17}{Health geography studies based on spatial lifecourse epidemiology framework(\textbf{invited})}{Institute of Urban Environment, Chinese Academy of Sciences}{Xiamen, China}
+\mycvitemXP{2023.05.19}{Seeking your interest and going ahead will contribute to success(\textbf{invited})}{Xiamen No.1 High School of Fujian}{Xiamen, China}
+\mycvitemXP{2022.08.18}{Do neighborhood boundaries matter for examining the associations between environmental factors and obesity}{The 29th International Conference on Geoinformatics in 2022 session 10-2 GIScience for Public Health}{Beijing, China}
+\mycvitemXP{2020.12.12}{The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta(\textbf{invited})}{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance}{Xiamen, China}
+\mycvitemXP{2020.08.07}{What is geography? From coronavirus disease 2019 to Bei Dou Systems(\textbf{invited})}{Tong An No.1 High School of Fujian}{Xiamen, China}
+\mycvitemXP{2018.05.27}{The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics}{11th Chinese R Language Conference}{Beijing, China}
+\mycvitemXP{2018.05.22}{High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale}{13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018)}{ Beijing, China}
+\mycvitemXP{2017.11.11}{The Environmental Effect of Urban Form on PM2.5: A Case Study of Beijing-Tianjin-Hebei Urban Agglomeration}{9th Chinese Landscape Eoclogy workshop}{Guangzhou, China}
+\mycvitemXP{2017.09.28}{The Assement Platform of Urban Forest Ecosystem Servcie Based on InVEST model and IOT(\textbf{invited})}{2rd urban environment long-term monitor and sustainable development workshop}{Shanghai, China}
+\mycvitemXP{2016.11.27}{The Criminal Geographical Analysis about Walking Environment of Urban}{The Workshop of 12th Spatial Behavior and Planning \& Spatial-Temporal Behavior and Social Planning Research}{Beijing, China}
+\mycvitemXP{2016.07.01}{Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District}{10th annual conference of International Association of China Planning}{Beijing, China}
