--- a/researches.tex
+++ b/researches.tex
@@ -1,8 +1,8 @@
 \section{\texorpdfstring{\faUniversity\ Research Projects}{Research Projects}}
-\mycvitemac{2021-2021}{'Investigating the Changes of Residents' Daily Behaviors, Lifestyles, and Built Environment During the COVID-19 Pandemic', WeSpace Academic Support Plan in 2020: "Tsinghua-Tencent" Emerging Technologies Future Urban Space project}{PI}
-\mycvitemac{2018-2019}{'The construction of Typhoon Disaster Assessment Index Based on GIS and Multi-source Remote Sensing Data in Fujian Province', Open Fund of the Big Data Institute of Digital Natural Disaster Monitoring in Fujian (NDMBD2018001)}{Investigator}
-\mycvitemac{2016-2020}{'Research on the key technology research and integration demonstration of urban agglomeration ecological security in the Yangtze River Delta', National Key Research and Development Plan(2016YFC0502704)}{Investigator}
-\mycvitemac{2015-2018}{'Scaling up of carbon sequestration for Eucalyptus plantations based on ETKF-3DVAR hybrid data assimilation', National Natural Science Foundation of China(31470578)}{Investigator}
-\mycvitemacl{2015-2016}{'The Spatiotemporal Difference of Tourism in Fujian Province Based on Spatial Mismatch Theory', The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2015137)}{Investigator}
-\mycvitemacl{2015-2016}{'The Spatial Optimization Evaluation of Medical Facility Based on GIS in Cangshan District, Fuzhou', The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2015146)}{Investigator}
-\mycvitemac{2014-2015}{'The Optimization Model of High Education Staff’s Refuge Space Under Earthquake Disater', The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2014137)}{PI}
+\mycvitemac{2023-2026}{"Evaluation and prevention of health risks in the community home environment for the elderly and children, and development of appropriate products", National Key Research and Development Plan(2023YFC3604704)}{Investigator}
+\mycvitemac{2022-2025}{"The mechanism of the impact of urban neighbohood-level walkability on child obesity",National Natural Science Foundation of China(42271433)}{Investigator}
+\mycvitemac{2021-2021}{"Investigating the Changes of Residents' Daily Behaviors, Lifestyles, and Built Environment During the COVID-19 Pandemic", WeSpace Academic Support Plan in 2020: "Tsinghua-Tencent" Emerging Technologies Future Urban Space project}{PI}
+\mycvitemac{2018-2019}{"The construction of Typhoon Disaster Assessment Index Based on GIS and Multi-source Remote Sensing Data in Fujian Province", Open Fund of the Big Data Institute of Digital Natural Disaster Monitoring in Fujian (NDMBD2018001)}{Investigator}
+\mycvitemac{2016-2020}{"Research on the key technology research and integration demonstration of urban agglomeration ecological security in the Yangtze River Delta", National Key Research and Development Plan(2016YFC0502704)}{Investigator}
+\mycvitemac{2015-2018}{"Scaling up of carbon sequestration for Eucalyptus plantations based on ETKF-3DVAR hybrid data assimilation", National Natural Science Foundation of China(31470578)}{Investigator}
+\mycvitemac{2014-2015}{"The Optimization Model of High Education Staff’s Refuge Space Under Earthquake Disater", The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2014137)}{PI}
