--- a/activities.tex
+++ b/activities.tex
@@ -1,10 +1,10 @@
 \section{\texorpdfstring{\faGroup\ Academic Service \& Affiliations}{Academic Service \& Affiliations}}
-\mycvitemac{from 2019}{International Institute of Spatial Lifecourse Epidemiology (ISLE)}{Fellow}
+\mycvitemac{from 2019}{International Institute of Spatial Lifecourse Health (ISLE)}{Fellow}
 \mycvitemac{from 2019}{GeoDa Center, rgeoda, libgeoda Github Organizations}{Contributor}
 \mycvitemac{from 2015}{The Organizations "Sustainable Cities \& Mobility"}{Volunteer}
-\mycvitemac{2020-2023}{GISphere}{Editor Board, Member}
+\mycvitemac{2020-2023}{GISphere}{Editor Board, Council Member, Editor in Chief of Wechat}
 \mycvitemac{2018-2020}{Aliyunqi Community}{Expert}
 \mycvitemac{2017-2019}{International Association of Landscape Ecology of China(IALE-China)}{Member}
 \mycvitemac{2016-2017}{Green Bike-Transit}{Volunteer}
 \mycvitemacl{2013-2017}{The Geographical Tribune of Youth}{Founder, Editor in Chief, Associate Editor, Assistant Editor in Chief}
-\mycvitemacl{from 2019}{European Heart Journal, Sustainable Cities and Society, Cities, Frontiers in Public Health, Frontiers in Environmental Science, International Journal of Digital Earth, Scientific Reports, Data in Brief, The Journal of Open Source Software, Shanghai Urban Planning Review}{Reviewer}
+\mycvitemacl{from 2019}{European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, Cities, Methods in Ecology and Evolution, International Journal of Digital Earth, Frontiers in Public Health, Frontiers in Environmental Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, Shanghai Urban Planning Review}{Reviewer}
