--- a/cnlatex/poster.tex
+++ b/cnlatex/poster.tex
@@ -1,4 +1,4 @@
-\section{\texorpdfstring{\faFileImageO\ 壁报}{壁报}}
-\mycvitemXP{2017.12.10}{Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution}{2017 AGU Fall Meeting}{New Orleans, LA, USA.}
+\section{\texorpdfstring{\faFileImageO\ 海报张贴}{海报张贴}}
+\mycvitemXP{2017.12.10}{Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution}{2017 AGU Fall Meeting}{美国,新奥尔良}
 \mycvitemXP{2017.05.16}{\songti{不同分辨率的城市碳排放空间分布与城市空间形态景观破碎化之间的关系}}{\songtix{第九届现代生态学讲座}}{中国,上海}
-\mycvitemXP{2016.06.26}{The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City}{2016 International Low Impact Development Conference}{中国,北京国家会议中心}
+\mycvitemXP{2016.06.26}{The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City}{2016 International Low Impact Development Conference}{中国,北京}
