--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -2,192 +2,207 @@
 \newcommand{\Revision}{\songtix{返修}}
 \newcommand{\Review}{\songtix{审稿}}
 \newcommand{\Submitted}{\songtix{投稿}}
-\newcommand{\CS}{*} % corresponding author
+\newcommand{\CS}{\textsuperscript{*}} % corresponding author
 \newcommand{\CF}{\textsuperscript{\#}} % co-first author
 
 
 \section{\texorpdfstring{\faBook\ 出版物}{出版物}}
 \CS 通讯作者, \CF 共同第一作者.
 
-\subsection*{\texorpdfstring{\faBook\ 期刊论文}{期刊论文}}
+\subsection*{\texorpdfstring{\faBook\ 期刊论文(第一作者或关键作者[导师一作])}{期刊论文(第一作者或关键作者[导师一作])}}
 %\subsection*{Peer-Reviewed Journal Articles}
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    Chun Yin, Jiahang Liu, \Shaoqing, Bindong Sun.(2024).
-    Mixed land use has opposite associations with subjective well-being through social capital: Spatial heterogeneity in residential and workplace neighborhoods.
-    \textit{Travel Behaviour and Society}.\textit{35}, 100724.
-    \DOI{10.1016/j.tbs.2023.100724}. [SSCI, IF = 5.2].
+    \Shaoqing, Ge Qiu, Yuchen Li, Shuhan Yang, Shujuan Yang, Peng Jia\CS (2024).
+    State of the art of lifecourse cohort establishment. 
+    \textit{China CDC Weekly} \textit{(Accepted)}. [SCI, IF=4.7, Q1].
 \item
-    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou.(2024).
-    Local carbon emission zone construction in the highly urbanized regions: Application of residential and transport CO$_2$ emissions in Shanghai, China.
-    \textit{Building and Environment}.\textit{247}, 111007.
-    \DOI{10.1016/j.buildenv.2023.111007}. [SCI, IF = 7.4].
+    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia (2023).
+    Assessing spatiotemporal bikeability using multi-source geospatial big data: a case study of Xiamen, China. 
+    \textit{International Journal of Applied Earth Observation and Geoinformation}: \textit{125}, 103539.
+    \DOI{10.1016/j.jag.2023.103539}. [SCI, IF=7.5, Q1].
 \item
-    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia. (2023).
-    Assessing Spatiotemporal Bikeability Using Multi-Source Geospatial Big Data: A Case Study of Xiamen, China.
-    \textit{International Journal of Applied Earth Observation and Geoinformation}. \textit{125}, 103539.
-    \DOI{10.1016/j.jag.2023.103539}. [SCI, IF = 7.5].
-\item
-    Shujuan Yang, Bin Yu, Wanqi Yu, \Shaoqing, Chuanteng Feng, Ying Shao,Xing Zhao, Xiaoqing Li, Tianjing He, Peng Jia. (2023).
+    Shujuan Yang, Bin Yu, Wanqi Yu, \Shaoqing, Chuanteng Feng, Ying Shao,Xing Zhao, Xiaoqing Li, Tianjing He, Peng Jia\CS (2023).
     Development and validation of an age-sex-ethnicity-specific metabolic syndrome score in the Chinese adults.
-    \textit{Nature Communications}. \textit{14}(1), 6988.
-    \DOI{10.1038/s41467-023-42423-y}. [SCI, IF = 16.6].
+    \textbf{\textit{Nature Communications}} \textit{14}: 6988.
+    \DOI{10.1038/s41467-023-42423-y}. [SCI, IF=16.6, Q1].
 \item
-    Peng Jia, Yuanyuan Shi, Qi Jiang, \Shaoqing,Bin Yu, Shuhan Yang, Ge Qiu, Shujuan Yang. (2023).
+    Peng Jia\CS, Yuanyuan Shi, Qi Jiang, \Shaoqing, Bin Yu, Shuhan Yang, Ge Qiu, Shujuan Yang (2023).
     Environmental determinants of childhood obesity: a meta-analysis.
-    \textit{The Lancet Global Health}. \textit{11}, S7.
-    \DOI{10.1016/S2214-109X(23)00092-X}. [SCI, IF = 34.3].
+    \textbf{\textit{The Lancet Global Health}} \textit{11}: S7.
+    \DOI{10.1016/S2214-109X(23)00092-X}. [SCI, IF=34.3, Q1].
 \item
-    Shudi Zuo, \Shaoqing, Jiaheng Ju, Fanxin Meng, Yin Ren, Yunfeng Tian, Kaide Wang. (2022).
+    Shudi Zuo, \Shaoqing, Jiaheng Ju, Fanxin Meng, Yin Ren, Yunfeng Tian, Kaide Wang (2022).
     The importance of the functional mixed entropy for the explanation of residential and transport CO$_2$ emissions in the urban center of China.
-    \textit{Journal of Cleaner Production}. \textit{380}, 134947.
-    \DOI{10.1016/j.jclepro.2022.134947}. [SCI, IF = 11.1].
+    \textit{Journal of Cleaner Production}: \textit{380}, 134947.
+    \DOI{10.1016/j.jclepro.2022.134947}. [SCI, IF=11.1, Q1].
 \item
-    Pengxin Zhang, Shuhan Yang, \Shaoqing, Darren How Jin Aik, Shujuan Yang, Peng Jia. (2022).
-    Global spreading of Omicron variant of COVID-19.
-    \textit{Geospatial Health}. \textit{17}.
-    \DOI{10.4081/gh.2022.1083}. [SCI, IF = 1.7].
+    \Shaoqing\CF, Xiaoman Zheng\CF, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren\CS (2021).
+    Improving plot-level model of forest biomass: a combined approach using machine learning with spatial statistics.
+    \textit{Forests} \textit{12}(12): 1663.
+    \DOI{10.3390/f12121663}. [SCI, IF=2.9, Q2].
 \item
-    Yupeng Liu, Jiajia Li, Weiqiang Chen, Lulu Song, \Shaoqing. (2022).
-    Quantifying urban mass gain and loss by a GIS‐based material stocks and flows analysis.
-    \textit{Journal of Industrial Ecology}. \textit{26}(3), 1051-1060.
-    \DOI{10.1111/jiec.13252}. [SCI, IF = 5.9].
-\item
-    Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Zhihong Zhang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang. (2022).
-    Identification of two-dimensional copper signatures in human blood for bladder cancer with machine learning.
-    \textit{Chemical Science}. \textit{13}(6), 1648-1656.
-    \DOI{10.1039/D1SC06156A}. [SCI, IF = 8.4].
-\item
-    \Shaoqing\CF, Xiaoman Zheng\CF, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren. (2021).
-    Improving plot-level model of forest biomass: A combined approach using machine learning with spatial statistics.
-    \textit{Forests}. \textit{12}(12), 1663.
-    \DOI{10.3390/f12121663}. [SCI, IF = 2.9].
-\item
-    Peng Jia, \Shaoqing, Tong Wu, Shujuan Yang. (2021).
-    New approaches to anticipate the risk of reverse zoonosis.
-    \textit{Trends in Ecology \& Evolution}. \textit{36}(7), 580-590.
-    \DOI{10.1016/j.tree.2021.03.012}. [SCI, IF = 16.8].
-\item
-    Panfeng Dou, Shudi Zuo, Yin Ren, Manuel J. Rodriguez, \Shaoqing. (2021).
-    Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
-    \textit{Journal of Environmental Management}. \textit{290}, 112588.
-    \DOI{10.1016/j.jenvman.2021.112588}. [SCI, IF = 8.7].
-\item
-    Shujuan Yang, \Shaoqing, Yuling Huang, Peng Jia. (2021).
+    Shujuan Yang, \Shaoqing, Yuling Huang, Peng Jia\CS (2021).
     Pitfalls in Modeling Asymptomatic COVID-19 Infection.
-    \textit{Frontiers in Public Health}. \textit{9}, 593176.
-    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF = 5.2].
+    \textit{Frontiers in Public Health} \textit{9}: 593176.
+    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF=5.2, Q3].
 \item
-    Lulu Song, \Shaoqing, Zhi Cao, Yupeng Liu, Weiqiang Chen. (2021).
-    High spatial resolution mapping of steel resources accumulated above ground in mainland China: Past trends and future prospects.
-    \textit{Journal of Cleaner Production}. \textit{297}, 144609.
-    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF = 11.1].
+    Peng Jia\CS, \Shaoqing, Tong Wu, Shujuan Yang (2021).
+    New approaches to anticipate the risk of reverse zoonosis.
+    \textbf{\textit{Trends in Ecology \& Evolution}} \textit{36}: 580-590.
+    \DOI{10.1016/j.tree.2021.03.012}. [SCI, IF=16.8, Q1].
 \item
-    Shudi Zuo, Lianping Yang, Panfeng Dou, Hung Chak Ho, \Shaoqing, Wenjun Ma, Yin Ren, Cunrui Huang. (2020).
-    The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
-    \textit{Science of the Total Environment}. \textit{764}, 144609.
-    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 9.8].
+    Peng Jia\CS, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou (2020).
+    Natural environment and childhood obesity: a systematic review.
+    \textit{Obesity Reviews} 22: e13097.
+    \DOI{10.1111/obr.13097}. [SCI, IF=8.9, Q1].
 \item
-    \Shaoqing\CF, Yin Ren\CF, Shudi Zuo, Chengyi Lai, Jiajia Li, Shengyu Xie, Bingchu Chen. (2020).
+    \Shaoqing\CF, Yin Ren\CF, Shudi Zuo\CS, Chengyi Lai, Jiajia Li, Shengyu Xie, Bingchu Chen (2020).
     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
-    \textit{Remote Sensing}. \textit{12}(23), 3932.
-    \DOI{10.3390/rs12233932}. [SCI, IF = 5.0].
+    \textit{Remote Sensing} \textit{12}(23): 3932.
+    \DOI{10.3390/rs12233932}. [SCI, IF=5.0, Q2].
 \item
-    {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙. (2020).
+    {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙\CS(2020).
     春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
-    \textit{上海城市规划}. \textit{05}, 22-29.
-    \DOI{10.11982/j.supr.20200504}. [北大核心, 复合影响因子 = 2.219] 
+    \textit{上海城市规划} \textit{05}: 22-29.
+    \DOI{10.11982/j.supr.20200504}. [北大核心] 
 \item
-    Peng Jia, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou. (2020).
-    Natural environment and childhood obesity: A systematic review.
-    \textit{Obesity Reviews}. 1-9.
-    \DOI{10.1111/obr.13097}. [SCI, IF = 8.9].
-\item
-    XiaoFang Pan, Hu Li, Lixin Zhao, Xiaoru Yang, Jianqiang Su, \Shaoqing, Jing Ning, Chunxing Li, Guanjing Cai, GeFu Zhu. (2020).
-    Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
-    \textit{Journal of Cleaner Production}. \textit{278}, 123418.
-    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 11.1].
-\item
-    Peng Jia, Xinxi Cao, Hongxi Yang, \Shaoqing, Pan He, Ganlin Huang, Tong Wu, Yaogang Wang. (2020).
-    Green space access in the neighbourhood and childhood obesity.
-    \textit{Obesity Reviews}. 1-12.
-    \DOI{10.1111/obr.13100}. [SCI, IF = 8.9].
-\item
-    Miyang Luo, Hanqi Li, Xiongfeng Pan, Teng Fei, \Shaoqing, Ge Qiu, Yuxuan Zou, Heleen Vos, Jiayou Luo, Peng Jia. (2020).
-    Neighbourhood speed limit and childhood obesity.
-    \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13052}. [SCI, IF = 8.9].
-\item
-    Shengyu Xie, Guangwei Yu, Chunxing Li, Jie Li, Gang Wang, \Shaoqing, Yin Wang. (2020).
-    Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity.
-    \textit{Journal of Analytical and Applied Pyrolysis}. \textit{150}, 104866.
-    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 6.0].
-\item
-    Xiongfeng Pan, Li Zhao, Jiayou Luo, Yinhao Li, Lin Zhang, Tong Wu, Melody Smith, \Shaoqing, Peng Jia. (2020).
-    Access to bike lanes and childhood obesity: A systematic review and meta‐analysis.
-    \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13042}. [SCI, IF = 8.9].
-\item
-    \Shaoqing, Shudi Zuo, Yin Ren. (2020).
+    \Shaoqing, Shudi Zuo, Yin Ren\CS (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
-    \textit{Data in Brief}. \textit{29}, 105274.
-    \DOI{10.1016/j.dib.2020.105274}. [ESCI, IF = 1.2].
+    \textit{Data in Brief} \textit{29}: 105274.
+    \DOI{10.1016/j.dib.2020.105274}. [ESCI, IF=1.2].
 \item
-    Shudi Zuo, \Shaoqing, Yin Ren. (2019).
+    Shudi Zuo, \Shaoqing, Yin Ren (2019).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
-    \textit{Journal of Cleaner Production}. \textit{244}, 118659.
-    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 11.1].
+    \textit{Journal of Cleaner Production} \textit{244}: 118659.
+    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF=11.1, Q1].
 \item
-    窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
-    气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
-    {\songtix{环境科学学报}}. \textit{39}(7), 2398-2409.
-    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子 = 3.417] 
-\item
-    Qing Yang, Tianyue Huang, Saige Wang, Jiashuo Li, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng. (2019).
-    A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
-    \textit{Applied Energy}. \textit{247}, 254-269.
-    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 11.2].
-\item
-    Guoliang Yun, Yuanrong He, Yuantong Jiang, Panfeng Dou, \Shaoqing. (2019).
-    PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
-    \textit{Atmosphere}. \textit{10}(2), 55.
-    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.9].
-\item
-    Shudi Zuo, \Shaoqing, Xiaodong Song, Chengdong Xu, Yilan Liao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
-    Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
-    \textit{Remote Sensing}. \textit{10}(11), 1814.
-    \DOI{10.3390/rs10111814}. [SCI, IF = 5.0].
-\item
-    Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren. (2018).
-	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
-    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
-    \DOI{10.3390/ijerph15102175}. [EI, Citescore = 5.4].
-\item
-    {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
+    {\heiti{戴劭勍}}, 江辉仙\CS, 李佳佳, 苏娴, 吴娟, 任引 (2018).
 	H市城区步行环境对两抢一盗警情的影响.
-    {\songtix{地理科学}}.  \textit{38}(8), 1235-1244.
-    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子 = 7.367]
+    {\songtix{地理科学}}  \textit{38}(8): 1235-1244.
+    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [北大核心, CSCD, CSSCI]
+%\end{etaremune}
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ 期刊论文(共同作者)}{期刊论文(共同作者)}}
+%\subsection*{Peer-Reviewed Journal Articles}
+\begin{enumerate}
+%\begin{etaremune}
 \item
-    Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
-	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
-    \textit{Remote Sensing}. \textit{10}(4), 521.
-    \DOI{10.3390/rs10040521}. [SCI, IF = 5.0].
+    Weiwei Zhang, Zixi Liu, Kun Qin, \Shaoqing, Huiyuan Lu, Miao Lu, Jianwan Ji, Zhaohui Yang, Chao Chen, Peng Jia\CS (2024).
+    Long-term dynamic monitoring and driving force analysis of eco-environmental quality in China. 
+    \textit{Remote Sensing} \textit{(Accepted)}. [SCI, IF=5.0, Q2].
 \item
-    叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2018).
+    Chun Yin, Jiahang Liu, \Shaoqing, Bindong Sun (2024).
+    Mixed land use has opposite associations with subjective well-being through social capital: spatial heterogeneity in residential and workplace neighborhoods.
+    \textit{Travel Behaviour and Society} \textit{35}: 100724.
+    \DOI{10.1016/j.tbs.2023.100724}. [SSCI, IF=5.2, Q2].
+\item
+    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou (2024).
+    Local carbon emission zone construction in the highly urbanized regions: application of residential and transport CO$_2$ emissions in Shanghai, China.
+    \textit{Building and Environment} \textit{247}: 111007.
+    \DOI{10.1016/j.buildenv.2023.111007}. [SCI, IF=7.4, Q1].
+\item
+    Pengxin Zhang, Shuhan Yang, \Shaoqing, Darren How Jin Aik, Shujuan Yang, Peng Jia (2022).
+    Global spreading of Omicron variant of COVID-19.
+    \textit{Geospatial Health} \textit{17}.
+    \DOI{10.4081/gh.2022.1083}. [SCI, IF=1.7, Q4].
+\item
+    Yupeng Liu, Jiajia Li, Weiqiang Chen, Lulu Song, \Shaoqing \enspace (2022).
+    Quantifying urban mass gain and loss by a GIS‐based material stocks and flows analysis.
+    \textit{Journal of Industrial Ecology} \textit{26}(3): 1051-1060.
+    \DOI{10.1111/jiec.13252}. [SCI, IF=5.9, Q2].
+\item
+    Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Zhihong Zhang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang (2022).
+    Identification of two-dimensional copper signatures in human blood for bladder cancer with machine learning.
+    \textit{Chemical Science} \textit{13}(6): 1648-1656.
+    \DOI{10.1039/D1SC06156A}. [SCI, IF=8.4, Q1].
+\item
+    Panfeng Dou, Shudi Zuo, Yin Ren, Manuel J. Rodriguez, \Shaoqing \enspace (2021).
+    Refined water security assessment for sustainable water management: a case study of 15 key cities in the Yangtze River Delta, China.
+    \textit{Journal of Environmental Management} \textit{290}: 112588.
+    \DOI{10.1016/j.jenvman.2021.112588}. [SCI, IF=8.7, Q1].
+\item
+    Shudi Zuo, Lianping Yang, Panfeng Dou, Hung Chak Ho, \Shaoqing, Wenjun Ma, Yin Ren, Cunrui Huang (2021).
+    The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
+    \textit{Science of the Total Environment} \textit{764}: 144609.
+    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF=9.8, Q1].
+\item
+    Lulu Song, \Shaoqing, Zhi Cao, Yupeng Liu, Weiqiang Chen (2021).
+    High spatial resolution mapping of steel resources accumulated above ground in mainland China: Past trends and future prospects.
+    \textit{Journal of Cleaner Production} \textit{297}: 144609.
+    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF=11.1, Q1].
+\item
+    Peng Jia, Xinxi Cao, Hongxi Yang, \Shaoqing, Pan He, Ganlin Huang, Tong Wu, Yaogang Wang (2021).
+    Green space access in the neighbourhood and childhood obesity.
+    \textit{Obesity Reviews} 22: e13100.
+    \DOI{10.1111/obr.13100}. [SCI, IF=8.9, Q1].
+\item
+    Miyang Luo, Hanqi Li, Xiongfeng Pan, Teng Fei, \Shaoqing, Ge Qiu, Yuxuan Zou, Heleen Vos, Jiayou Luo, Peng Jia (2021).
+    Neighbourhood speed limit and childhood obesity.
+    \textit{Obesity Reviews} 22: e13052.
+    \DOI{10.1111/obr.13052}. [SCI, IF=8.9, Q1].
+\item
+    Xiongfeng Pan, Li Zhao, Jiayou Luo, Yinhao Li, Lin Zhang, Tong Wu, Melody Smith, \Shaoqing, Peng Jia. (2021).
+    Access to bike lanes and childhood obesity: a systematic review and meta‐analysis.
+    \textit{Obesity Reviews} 22: e13042.
+    \DOI{10.1111/obr.13042}. [SCI, IF=8.9, Q1]
+\item
+    XiaoFang Pan, Hu Li, Lixin Zhao, Xiaoru Yang, Jianqiang Su, \Shaoqing, Jing Ning, Chunxing Li, Guanjing Cai, GeFu Zhu (2021).
+    Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
+    \textit{Journal of Cleaner Production} \textit{278}: 123418.
+    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF=11.1, Q1].
+\item
+    Shengyu Xie, Guangwei Yu, Chunxing Li, Jie Li, Gang Wang, \Shaoqing, Yin Wang (2020).
+    Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity.
+    \textit{Journal of Analytical and Applied Pyrolysis} \textit{150}: 104866.
+    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF=6.0, Q2].
+\item
+    窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁 (2019).
+    气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
+    {\songtix{环境科学学报}} \textit{39}(7): 2398-2409.
+    \DOI{10.13671/j.hjkxxb.2019.0122}. [北大核心, CSCD] 
+\item
+    Qing Yang, Tianyue Huang, Saige Wang, Jiashuo Li, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng (2019).
+    A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
+    \textit{Applied Energy} \textit{247}: 254-269.
+    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF=11.2, Q1].
+\item
+    Guoliang Yun, Yuanrong He, Yuantong Jiang, Panfeng Dou, \Shaoqing \enspace (2019).
+    PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
+    \textit{Atmosphere} \textit{10}(2): 55.
+    \DOI{10.3390/atmos10020055}. [SCI, IF=2.9, Q4].
+\item
+    Shudi Zuo, \Shaoqing, Xiaodong Song, Chengdong Xu, Yilan Liao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren (2018).
+    Determining the mechanisms that influence the surface temperature of urban forest canopies by combining remote sensing methods, ground observations, and spatial statistical models. 
+    \textit{Remote Sensing} \textit{10}(11): 1814.
+    \DOI{10.3390/rs10111814}. [SCI, IF=5.0, Q2].
+\item
+    Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren (2018).
+	Analysis of heavy metal sources in the soil of riverbanks across an urbanization gradient.
+    \textit{International Journal of Environmental Research and Public Health} \textit{15}(10): 2175.
+    \DOI{10.3390/ijerph15102175}. [SCI, IF=4.6, Q3].
+\item
+    Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren (2018).
+	Individual and interactive influences of anthropogenic and ecological factors on forest PM2.5 concentrations at an urban scale.
+    \textit{Remote Sensing} \textit{10}(4): 521.
+    \DOI{10.3390/rs10040521}. [SCI, IF=5.0, Q2].
+\item
+    叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙 (2018).
 	不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
-    {\songtix{中国人口·资源与环境}}. \textit{28}(02), 115-122.
-    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子 = 8.421]
+    {\songtix{中国人口·资源与环境}} \textit{28}(02): 115-122.
+    \DOI{10.12062/cpre.20170915}. [北大核心, CSCD, CSSCI]
 \item
-    Qin Ye, \Shaoqing, Gang Zeng. (2017).
+    Qin Ye, \Shaoqing, Gang Zeng (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
-    \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
-    \DOI{10.1080/10042857.2017.1418273}. [ESCI, IF = 9.3].
+    \textit{Chinese Journal of Population Resources and Environment} \textit{16}(1): 1-11.
+    \DOI{10.1080/10042857.2017.1418273}. [ESCI, IF=9.3].
 \item
-   李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江. (2016).
+   李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江 (2016).
 	基于政府大数据的北京城市空间发展模式分析.
-    {\songtix{地理信息世界}}. \textit{23}(3), 20-26.
-    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子 = 1.099]
+    {\songtix{时空信息学报(地理信息世界)}} \textit{23}(3): 20-26.
+    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST]
 %\end{etaremune}
 \end{enumerate}
 
@@ -196,12 +211,12 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2019).
-	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
+    Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren (2019).
+	Individual and interactive influences of anthropogenic and ecological factors on forest PM2.5 concentrations at an urban scale.
     \textit{Advances in Quantitative Remote Sensing in China–In Memory of Prof. Xiaowen Li}.316-332.
 \item
-    \Shaoqing, Jiajia Li, Shudi Zuo, Yin Ren, Huixian Jiang. (2017).
-	Landscape-Scale Simulation Analysis of Waterlogging and Sponge City Planning for a Central Urban Area in Fuzhou City, China.
+    \Shaoqing, Jiajia Li, Shudi Zuo, Yin Ren, Huixian Jiang (2017).
+	Landscape-scale simulation analysis of waterlogging and sponge city planning for a central urban area in Fuzhou city, China.
     \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
     \DOI{10.1061/9780784481042.028}. [EI]
 %\end{etaremune}
@@ -233,6 +248,18 @@
 \item
     基于环境物联网数据的水源涵养监测系统. V1.0.
     \textit{登记号: 2018SR745897}. (2018).
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ 开放数据 \& 代码}{开放数据 \& 代码}}
+\begin{enumerate}
+\item
+   \Shaoqing. (2020).
+    GISerDaiShaoqing/3dmodelFJNU 1.0 (Version 1.0). Zenodo. 
+    \DOI{10.5281/zenodo.4277977}.
+\item
+   \Shaoqing, Shudi Zuo, Yin Ren. (2020).
+    GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.6 (Version 0.6) . Zenodo. 
+    \DOI{10.5281/zenodo.3566072}.
 \end{enumerate}
 
 \subsection*{\texorpdfstring{\faBook\ 会议论文 \& 摘要}{会议论文 \& 摘要}}
@@ -285,43 +312,4 @@
     \Shaoqing, Huixian Jiang, Jiajia Li. (2016).
     The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City.
     \textit{2016 International Low Impact Development Conference, paper 391}.
-\end{enumerate}
-
-\subsection*{\texorpdfstring{\faBook\ 开放数据 \& 代码}{开放数据 \& 代码}}
-\begin{enumerate}
-\item
-   \Shaoqing. (2020).
-    GISerDaiShaoqing/3dmodelFJNU 1.0 (Version 1.0). Zenodo. 
-    \DOI{10.5281/zenodo.4277977}.
-\item
-   \Shaoqing, Shudi Zuo, Yin Ren. (2020).
-    GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.6 (Version 0.6) . Zenodo. 
-    \DOI{10.5281/zenodo.3566072}.
-\end{enumerate}
-
-%\subsection*{Papers submitted/under revision}
-\subsection*{\texorpdfstring{\faBook\ 投稿/返修论文}{投稿/返修论文}}
-\begin{enumerate}
-%\begin{etaremune}
-\item
-    \Shaoqing, Alfred Stein, Yuchen Li, Shujuan Yang, Peng Jia.
-    Street view imagery for built environment auditing: a systematic review.
-    \textit{International Journal of Geographical Information Science}. 
-    (\Review).
-\item
-    \Shaoqing, Frank Badu Osei, Peng Jia, Alfred Stein.
-    Mapping of hourly street-level PM2.5 concentrations using an ensemble-random forest model and multi-source geospatial data.
-    \textit{Environment International}. 
-    (\Submitted).
-\item
-    Xiaoman Zheng, \Shaoqing, Qi Chen, Kim Calders, Chengdong Xu, Xiaohua Wei, Mazhan Zhuang, Yin Ren.
-    Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
-    \textit{Remote Sensing in Ecology and Conservation}. 
-    (\Revision).
-\item
-    Peng Jia, Tong Wu, \Shaoqing, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu,  Jing Su, Gordon G. Liu, Shujuan Yang.
-    Impacts of and vulnerability to the COVID-19 pandemic.
-    \textit{Landscape Ecology}. 
-    (\Submitted).
-%\end{etaremune}
 \end{enumerate}
