--- a/talk.tex
+++ b/talk.tex
@@ -2,6 +2,18 @@
 \begin{etaremune}
 \item
     \Shaoqing\
+    Seeking your interest and going ahead will contribute to success.
+    \textit{Xiamen No.1 High School of Fujian}, Xiamen, China.
+    May. 19, 2023.
+    \invited
+\item
+    \Shaoqing\
+    Do neighborhood boundaries matter for examining the associations between environmental factors and obesity(online).
+    \textit{The 29th International Conference on Geoinformatics in 2022, China University of Geosciences(Beijing)}, Beijing, China.
+    Aug. 18, 2022.
+    \invited
+\item
+    \Shaoqing\
     The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta(online).
     \textit{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance, Xiamen University}, Xiamen, China.
     Dem. 12, 2020.
