--- a/awards.tex
+++ b/awards.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faTrophy\ Awards \& Honors}{Awards \& Honors}}
+\mycvitemPP{2022.03}{Outstanding contributions to COVID-19 epidemic prevention and control(From the health commission of Tumot Left Banner, Inner Mongolia autonomous region)}
 \mycvitemPP{2021.07}{The National 2nd Prize in the 5th Planning Decision Support Model Design Contest(Chengyuan Cup)}
 \mycvitemPP{2019.06}{China Scholarship Council(CSC[201904910428])}
 \mycvitemPP{2019.06}{The 2nd Grade Scholarship of Yonker Environmental Protection Scholarship}
