--- a/publications.tex
+++ b/publications.tex
@@ -81,6 +81,11 @@
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
     \textit{Scientia Geographica Sinica}  \textit{38}(8): 1235-1244.
     \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, in Chinese].
+\item
+    \Shaoqing, Jiajia Li, Shudi Zuo, Yin Ren, Huixian Jiang (2017).
+	Landscape-scale simulation analysis of waterlogging and sponge city planning for a central urban area in Fuzhou city, China.
+    \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
+    \DOI{10.1061/9780784481042.028}. [EI]
 %\end{etaremune}
 \end{enumerate}
 
@@ -88,9 +93,10 @@
 %\subsection*{Peer-Reviewed Journal Articles}
 \begin{enumerate}
 \item
-    Weiwei Zhang, Zixi Liu, Kun Qin, \Shaoqing, Huiyuan Lu, Miao Lu, Jianwan Ji, Zhaohui Yang, Chao Chen, Peng Jia\CS (2024).
+    Weiwei Zhang, Zixi Liu, Kun Qin, \Shaoqing, Huiyuan Lu, Miao Lu, Jianwan Ji, Zhaohui Yang, Chao Chen, Peng Jia (2024).
     Long-term dynamic monitoring and driving force analysis of eco-environmental quality in China. 
-    \textit{Remote Sensing} \textit{(Accepted)}. [SCI, IF=5.0, Q2].
+    \textit{Remote Sensing} \textit{16}(6): 1028
+    \DOI{10.3390/rs16061028}. [SCI, IF=5.0, Q2].
 \item
     Chun Yin, Jiahang Liu, \Shaoqing, Bindong Sun (2024).
     Mixed land use has opposite associations with subjective well-being through social capital: spatial heterogeneity in residential and workplace neighborhoods.
@@ -206,11 +212,6 @@
     Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren (2019).
 	Individual and interactive influences of anthropogenic and ecological factors on forest PM2.5 concentrations at an urban scale.
     \textit{Advances in Quantitative Remote Sensing in China–In Memory of Prof. Xiaowen Li}.316-332.
-\item
-    \Shaoqing, Jiajia Li, Shudi Zuo, Yin Ren, Huixian Jiang (2017).
-	Landscape-scale simulation analysis of waterlogging and sponge city planning for a central urban area in Fuzhou city, China.
-    \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
-    \DOI{10.1061/9780784481042.028}. [EI]
 %\end{etaremune}
 \end{enumerate}
 
