--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -82,6 +82,11 @@
 	H市城区步行环境对两抢一盗警情的影响.
     {\songtix{地理科学}}  \textit{38}(8): 1235-1244.
     \DOI{10.13249/j.cnki.sgs.2018.08.005}. [北大核心, CSCD, CSSCI]
+\item
+    \Shaoqing, Jiajia Li, Shudi Zuo, Yin Ren\CS, Huixian Jiang (2017).
+	Landscape-scale simulation analysis of waterlogging and sponge city planning for a central urban area in Fuzhou city, China.
+    \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
+    \DOI{10.1061/9780784481042.028}. [EI]
 %\end{etaremune}
 \end{enumerate}
 
@@ -90,9 +95,10 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    Weiwei Zhang, Zixi Liu, Kun Qin, \Shaoqing, Huiyuan Lu, Miao Lu, Jianwan Ji, Zhaohui Yang, Chao Chen, Peng Jia\CS (2024).
+    Weiwei Zhang, Zixi Liu, Kun Qin, \Shaoqing, Huiyuan Lu, Miao Lu, Jianwan Ji, Zhaohui Yang, Chao Chen, Peng Jia (2024).
     Long-term dynamic monitoring and driving force analysis of eco-environmental quality in China. 
-    \textit{Remote Sensing} \textit{(Accepted)}. [SCI, IF=5.0, Q2].
+    \textit{Remote Sensing} \textit{16}(6): 1028
+    \DOI{10.3390/rs16061028}. [SCI, IF=5.0, Q2].
 \item
     Chun Yin, Jiahang Liu, \Shaoqing, Bindong Sun (2024).
     Mixed land use has opposite associations with subjective well-being through social capital: spatial heterogeneity in residential and workplace neighborhoods.
@@ -214,11 +220,6 @@
     Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren (2019).
 	Individual and interactive influences of anthropogenic and ecological factors on forest PM2.5 concentrations at an urban scale.
     \textit{Advances in Quantitative Remote Sensing in China–In Memory of Prof. Xiaowen Li}.316-332.
-\item
-    \Shaoqing, Jiajia Li, Shudi Zuo, Yin Ren, Huixian Jiang (2017).
-	Landscape-scale simulation analysis of waterlogging and sponge city planning for a central urban area in Fuzhou city, China.
-    \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
-    \DOI{10.1061/9780784481042.028}. [EI]
 %\end{etaremune}
 \end{enumerate}
 
